# FUJISAN

./: .gitignore  README.md  pyproject.toml
FUJISAN/: run_FUJISAN.py
model/: LightGBMmodel_0102BitScore.txt  LightGBMmodel_best.txt
test/: MLdata_concordance.csv  diff.tsv  diff_readme.csv  same.tsv  same_readme.csv
