[project]
name = "fujisan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python =  ">=3.9"
dependencies = [
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
run_FUJISAN = 'FUJISAN.run_FUJISAN:main'

[tool.hatch.build.targets.wheel]
packages = ["FUJISAN"]